Implemented process files and write data analysis